--- a/depression.rmd
+++ b/depression.rmd
@@ -43,7 +43,18 @@ Vilken behandling som rekommenderas i första hand beror vanligen på depression
 
 Något om psykologisk behandling av depression. Beteendeaktivering.
 
-Lägg till Socialstyrelsens rekommendationer.
+[Socialstyrelsens rekommendationer 2019, inklusive kunskapsunderlag](https://www.socialstyrelsen.se/globalassets/sharepoint-dokument/artikelkatalog/nationella-riktlinjer/2021-4-7339-kunskapsunderlag.pdf).
+
+Dessa riktlinjer är något inkonsekventa:
+
+| Tillstånd        | Åtgärd       | Effekt (SMD) | Rekommendation    |
+|------------------|--------------|--------------|-------------------|
+| Depressiv episod | AD Läkemedel | 0.31 (=3p)   | 3, Bör erbjudas   |
+| Svårbeh depr     | Esketamin    | 4p           | 10, Undantagsfall |
+| GAD              | Gabapentin   | 0.36         | 10, Undantagsfall |
+
+Aripiprazol som tillägg vid TRD: "minskning av depressionssymtomen (medelvärdesskillnad, MD -3,0 till -1,8) jämfört med placebo som tillägg till antidepressiva läkemedel" kommenteras med "Resultatet tyder på en modest och tveksamt kliniskt betydelsefull effekt jämfört med placebo." emedan identisk effektstorlek för antidepressiva kommenteras med "Sammanvägt kan antidepressiva läkemedel anses ha en kliniskt relevant effekt på depressionssyndrom".
+
 
 ## Läkemedelsbehandling
 
@@ -120,6 +131,8 @@ knitr::kable(tbl, caption = "Förstahandsval enligt CANMAT")
 
 Även om man inte kunnat påvisa några säkra skillnader i effekt mellan dessa preparat visade en stor metaanalys att vissa läkemedel tenderade att ge bättre respons och samtidigt god tolerabilitet [@Cipriani2018]. De läkemedel som tenderade att ligga bäst till avseende effekt och samtidigt ha god tolerabilitet (färre avslut av behandlingen) var agomelatin, escitalopram\*, venlafaxin\*, vortioxetin. Läkemedel med fördelaktig effekt men utan fördel avseende tolerabilitet var amitriptylin, mirtazapin\*, och paroxetin. Läkemedel med tendens till lägst effektivitet var fluoxetin, reboxetin, fluvoxamin och trazodon. 
 
+Risken för levertransaminasstegring med agomelatin är kring 2.5% (0.5% med placebo) och det är oklart om risken skiljer sig från andra antidepressiva[@Perlemuter2016].
+
 \*Markeringen med asterisk visar de som också i CANMAT-guidelines konstateras ha visst stöd för bättre effekt (där anges också sertralin som ett medel som visat fördel avseende effekt).
 
 #### Effektivitet {#antidepressant-efficacy}
@@ -127,7 +140,6 @@ knitr::kable(tbl, caption = "Förstahandsval enligt CANMAT")
 Effektiviteten av antidepressiva är omdiskuterad. Ett stort problem är publikationsbias, där negativa studier sällan publiceras. Värdering av effekt i tex metaanalyser bör därför inkludera opublicerade studier. Placeboeffekten (eller regression till medelvärdet) är dock betydande. Effektstorleken för antidepressiva är ~ 0.3 (motsvarar 2-3 poäng på MADRS eller 10% symtomreduktion jfr placebo). Lägre efficacy hos äldre, se \@ref(depression-elderly).
 
 Se "Selective serotonin reuptake inhibitors versus placebo in patients with major depressive disorder. A systematic review with meta-analysis and Trial Sequential Analysis" [@Cipriani2018]
-
 
 ```{r figure-cipriani, fig.cap = 'Forest plots of network meta-analysis of all trials for efficacy and acceptability'}
 
@@ -529,7 +541,7 @@ Risk factors for and perinatal outcomes of major depression during pregnancy [@R
 
 ## Depression hos äldre {#depression-elderly}
 
-Effekten av antidepressiva läkemedel är lägre i högre åldrar. **Figur \@ref(fig:fig-older-adults-antidepressants)** visar effekten av antidepressiv läkemedelsbehandling i olika åldersgrupper [@Tedeschini2011].  Andelen som uppnår respons minskar med stigande ålder. Skillnaden mellan antidepressiv behandling och placebo minskar också i de högre åldersgrupperna. Respons definierades här som 50% eller större reduktion av depressiva symtom enligt skattingsskalorna MADRS eller HDRS.
+Effekten av antidepressiva läkemedel är lägre i högre åldrar[@Stone2022]. **Figur \@ref(fig:fig-older-adults-antidepressants)** visar effekten av antidepressiv läkemedelsbehandling i olika åldersgrupper [@Tedeschini2011].  Andelen som uppnår respons minskar med stigande ålder. Skillnaden mellan antidepressiv behandling och placebo minskar också i de högre åldersgrupperna. Respons definierades här som 50% eller större reduktion av depressiva symtom enligt skattingsskalorna MADRS eller HDRS.
 
 Någon skillnad i behandlingseffekt mellan olika grupper av antidepressiva (TCA, SSRI, och nyare ickeselektiva serotninåterupptagshämmare) har inte kunnat påvisas [@Bartels2003] <!-- [Note: Hur mycket är det studerat?] -->.
 
@@ -555,9 +567,13 @@ kable(tbl, format = "markdown")
 
 ``` 
 
+Tillägg av aripiprazol eller bupropion vid svårbehandlad depression hos äldre har studerats i en stor studie [@LenzeEric2023]. Den visade att tillägg av aripiprazol gav förbättrat välmående men ej högre andel remission än byte till- eller tillägg av bupropion.
+
+<!-- The Economist plot: https://www.economist.com/graphic-detail/2023/01/10/antidepressants-are-over-prescribed-but-genuinely-help-some-patients?utm_medium=cpc.adword.pd&utm_source=google&ppccampaignID=18151738051&ppcadID=&utm_campaign=a.22brand_pmax&utm_content=conversion.direct-response.anonymous&gad_source=1&gclid=CjwKCAjwg8qzBhAoEiwAWagLrEZW7q_x-uMdyoPnW29x7D4Xgc6hD_wAHGpmOlGKj1PZBPtM52_G8BoCe_QQAvD_BwE&gclsrc=aw.ds -->
+
 ## Antidepressivas effektivitet
 
-Effekten av SSRI och andra antidepressiva är välstuderad i kliniska prövningar och metaanalyser ger stöd för att de har en effekt mot pågående depression[@Cipriani2018]. Dock föreligger en publikationsbias som gjort att effektstorleken kan vara överdriven i publicerade studier[@Turner2008].
+Effekten av SSRI och andra antidepressiva är välstuderad i kliniska prövningar och metaanalyser ger stöd för att de har en viss effekt mot pågående depression[@Cipriani2018]. Dock föreligger en publikationsbias som gjort att effektstorleken kan vara överdriven i publicerade studier[@Turner2008].
 
 <!-- Effektstorlek -->
 <!-- Behandlingstid -->
