--- a/depression.rmd
+++ b/depression.rmd
@@ -139,7 +139,11 @@ Risken för levertransaminasstegring med agomelatin är kring 2.5% (0.5% med pla
 
 Effektiviteten av antidepressiva är omdiskuterad. Ett stort problem är publikationsbias, där negativa studier sällan publiceras. Värdering av effekt i tex metaanalyser bör därför inkludera opublicerade studier. Placeboeffekten (eller regression till medelvärdet) är dock betydande. Effektstorleken för antidepressiva är ~ 0.3 (motsvarar 2-3 poäng på MADRS eller 10% symtomreduktion jfr placebo). Lägre efficacy hos äldre, se \@ref(depression-elderly).
 
-Se "Selective serotonin reuptake inhibitors versus placebo in patients with major depressive disorder. A systematic review with meta-analysis and Trial Sequential Analysis" [@Cipriani2018]
+Ibland hävdas att antidepressiva har större effekt vid svårare depression jämfört med lindrigare. Detta tycktes bekräftas av en metaanalys som visade att fler av de studier som visade effekt av antidepressiva inkluderade patienter med svårare depression[@Khan2002;@Kirsch2008]. En senare analys antydde att skillnaden berodde på mindre respons på placebo i dessa studier[@Kirsch2008]. Se även diskussionsdelen i [@Voehringer2011], där STAR-D mm diskuteras.
+
+Dock visar en senare analys där individdata använts (detta är en bättre metod för att undersöka interaktion mellan behandling och svårighetsgrad) att det saknades en interaktion mellan svårighetsgrad och effekt av läkemedel[@Rabinowitz2016].
+
+Den hittills största analysen av publicerade och opublicerade data på effekt av antidepressiva är "Selective serotonin reuptake inhibitors versus placebo in patients with major depressive disorder. A systematic review with meta-analysis and Trial Sequential Analysis" [@Cipriani2018].
 
 ```{r figure-cipriani, fig.cap = 'Forest plots of network meta-analysis of all trials for efficacy and acceptability'}
 
@@ -245,6 +249,31 @@ knitr::kable(tbl, caption = "Tredjehandsval enligt CANMAT")
 <!-- - Agomelatin -->
 <!-- - Bupropion -->
 <!-- - Mirtazapin -->
+
+#### Effektivitet vid underhållsbehandling
+
+Enligt metaanalys av 16 studier på underhållsbehandling[@Borges2014], för de som svarar på initial behandling är risken för återfall (6-12m) 40% med placebo vs 20% med underhållsbehandling. Liknande resultat i andra metaanalyser [@Geddes2003] (K=31, N = 4410) och [@Kato2021] (K=40, N=8890). Andra hävdar att antidepressiva **ökar** risken för återfall efter att de satts ut[@Andrews2011]. Ingen av dessa analyser tar i beaktande problemet med "enrichment", vilket diskuteras utförligt i [@Voehringer2011].
+
+Dock finns betydande problem med studier av underhållsbehandling[@Voehringer2011]:
+
+- Oftast "post-marketing", **publikationsbias?**
+- Enrichment design: 
+  - Endast de som redan svarat på behandlingen akut tas med. 
+  - Detta överdiver sannolikt effekten av läkemedel vs placebo.
+- De flesta återfallen i dessa studier sker inom 6 månader 
+  - Dvs mäter egentligen i relaps den "akuta" fasen
+  - Räknar man endast på återfall efter 6 månader eller mer finns ingen skillnad mot placebo i 5 av 6 studier[@Voehringer2011].
+- Utsättningssymtom kan misstolkas som återfall[@Hengartner2021]
+
+STAR*D-studien motsvarar troligen bättre verkligheten. Där bibehöll hälften av de som svarat på akut behandling remission efter ett år med fortsatt läkemedelsbehandling[@Voehringer2011].
+
+Se även [@Horder2011]
+
+Se även [@Kirsch2007] om "response rate illusion".
+
+<!-- Most maintenance studies of antidepressants begin, before the study begins, with an acute major depressive episode, frequently treated with the antidepressant being studied. Then, patients who respond to the antidepressant are entered into the maintenance study. Those who do not respond or tolerate the antidepressant are not included; this already biases the study in favor of the antidepressant. Then patients are followed for one to two years. The majority of patients relapse in the first six months of follow-up, however. This does not prove maintenance efficacy, because the maintenance phase of treatment in MDD does not begin until one year after the acute episode ends, which is when we know that the natural remission of an acute depressive episode happens [16–18]. Thus, one year or longer is the relevant time frame to assess prevention of new episodes; there is a clear consensus on this issue in the depression literature. Even if one did not want to focus on one year, it would at least be reasonable to say that at least 6 months or longer after the acute episode is needed to assess maintenance efficacy.[@Voehringer2011] -->
+
+<!-- Most maintenance RCTs fail, as we will see, to pass this simple test. -->
 
 ### Uppföljning av behandlingseffekt
 
